# re_test_my

./: CMakeLists.txt  README.md  package.xml
action/: Pick.action  Plan.action
include/remy/: pick.h  robot_planner.h
launch/: mutli.launch  test.launch
src/: action_client.cpp  action_server.cpp  chef.cpp  cook.cpp  object_detection.cpp  pick.cpp  remy_test.cpp  robot_planner.cpp  srv_client.cpp  srv_server.cpp
srv/: ObjectDetection.srv
