<?xml version="1.0"?>
<package format="2">
  <name>remy</name>
  <version>0.0.0</version>
  <description>Remy test</description>

  <maintainer email="dzervas86@gmail.com">Dimitris Zervas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_robot_interaction</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_moveit</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_move_group</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_ros_robot_interaction</build_export_depend>
  <build_export_depend>moveit_ros_visualization</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_moveit</build_export_depend>
  <!-- <build_export_depend>message_runtime</build_export_depend> -->
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_robot_interaction</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_moveit</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>